[build-system]
requires = ["setuptools>=61.0", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix_a2a"
version = "0.1.0"
description = "Standalone Python package wrapping TRT-LLM Helix All-to-All CUDA kernels"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
mnnvl = ["cuda-python"]
dev = ["pytest"]
